--- a/Lazerunner/LazeRunner.html
+++ b/Lazerunner/LazeRunner.html
@@ -217,9 +217,9 @@
 
     function createBar() {
       const direction = Math.floor(Math.random() * 4);
-      const thickness = 20;
-      const length = Math.random() * 300 + 100;
-      const speed = 2 + Math.random() * 2;
+      const thickness = 30; // Espessura aumentada
+      const length = Math.random() * 400 + 200; // Comprimento aumentado (200-600px)
+      const speed = 1 + Math.random() * 1; // Velocidade reduzida (1-2)
 
       let bar = {};
 
