--- a/Lazerunner/LazeRunner.html
+++ b/Lazerunner/LazeRunner.html
@@ -65,6 +65,8 @@
       border-radius: 5px;
     }
     #startScreen button:hover, #gameOverScreen button:hover {
+     
+
       background-color: #ccc;
     }
     #startScreen.hidden, #gameOverScreen.hidden {
@@ -217,9 +219,9 @@
 
     function createBar() {
       const direction = Math.floor(Math.random() * 4);
-      const thickness = 30; // Espessura aumentada
-      const length = Math.random() * 400 + 200; // Comprimento aumentado (200-600px)
-      const speed = 1 + Math.random() * 1; // Velocidade reduzida (1-2)
+      const thickness = 30; // Espessura mantida
+      const length = Math.random() * 400 + 200; // Comprimento mantido (200-600px)
+      const speed = 1.5 + Math.random() * 1.5; // Velocidade aumentada (1.5-3)
 
       let bar = {};
 
@@ -354,14 +356,12 @@
       const dt = (timestamp - lastFrame) / 16.67;
       lastFrame = timestamp;
 
-      const baseInterval = 2500;
+      const baseInterval = 3500; // Aumentado de 2500 para 3500
       const speedUp = Math.min(score * 30, 1500);
       const barInterval = baseInterval - speedUp;
 
       if (timestamp - lastTime > barInterval) {
-        createBar();
-        if (score >= 10) createBar();
-        if (score >= 20) createBar();
+        createBar(); // Apenas uma barra por intervalo
         lastTime = timestamp;
         score++;
       }
