--- a/Lazerunner/LazeRunner_backup.html
+++ b/Lazerunner/LazeRunner_backup.html
@@ -127,183 +127,6 @@
       immuneCooldown: 750,
       lastImmuneEnd: 0
     };
-
-    let bars = [];
-    let score = 0;
-    let gameOver = false;
-
-    let keys = {
-      ArrowUp: false,
-      ArrowDown: false,
-      ArrowLeft: false,
-      ArrowRight: false,
-      'w': false, 'W': false,
-      's': false, 'S': false,
-      'a': false, 'A': false,
-      'd': false, 'D': false,
-      ' ': false,
-      'Enter': false
-    };
-
-    let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
-
-    function saveRanking() {
-      localStorage.setItem('rankings', JSON.stringify(rankings));
-    }
-
-    function updateRanking() {
-      const rankingList = document.getElementById('rankingList');
-      rankingList.innerHTML = '';
-      rankings.sort((a, b) => b.score - a.score);
-      rankings.slice(0, 10).forEach(entry => {
-        const li = document.createElement('li');
-        li.textContent = `${entry.name} - ${entry.score}`;
-        rankingList.appendChild(li);
-      });
-    }
-
-    document.addEventListener('keydown', (e) => {
-      if (e.key in keys) {
-        keys[e.key] = true;
-
-        if (e.key === ' ' && !player.immune && Date.now() - player.lastImmuneEnd >= player.immuneCooldown) {
-          player.immune = true;
-          player.immuneTime = Date.now();
-        }
-
-        if (e.key === 'Enter' && gameOver) {
-          resetGame();
-        }
-      }
-    });
-
-    document.addEventListener('keyup', (e) => {
-      if (e.key in keys) {
-        keys[e.key] = false;
-      }
-    });
-
-    playButton.addEventListener('click', () => {
-      startScreen.classList.add('hidden');
-      gameStarted = true;
-      resetGame();
-    });
-
-    restartButton.addEventListener('click', () => {
-      gameOverScreen.classList.add('hidden');
-      resetGame();
-    });
-
-    saveRankingButton.addEventListener('click', () => {
-      const name = prompt('Digite seu nome para salvar sua pontuação:');
-      if (name) {
-        rankings.push({ name, score });
-        saveRanking();
-        updateRanking();
-      }
-    });
-
-    function resetGame() {
-      player.x = canvas.width / 2;
-      player.y = canvas.height / 2;
-      player.immune = false;
-      score = 0;
-      bars = [];
-      gameOver = false;
-      lastTime = 0;
-      gameOverScreen.classList.add('hidden');
-      requestAnimationFrame(gameLoop);
-    }
-
-    function createBar() {
-      const direction = Math.floor(Math.random() * 4);
-      const thickness = 20;
-      const length = Math.random() * 300 + 100;
-      const speed = 2 + Math.random() * 2;
-
-      let bar = {};
-
-      switch (direction) {
-        case 0: // left to right (vertical)
-          bar = { x: -thickness, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: speed, dy: 0 };
-          break;
-        case 1: // right to left (vertical)
-          bar = { x: canvas.width, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: -speed, dy: 0 };
-          break;
-        case 2: // top to bottom (horizontal)
-          bar = { x: Math.random() * (canvas.width - length), y: -thickness, width: length, height: thickness, dx: 0, dy: speed };
-          break;
-        case 3: // bottom to top (horizontal)
-          bar = { x: Math.random() * (canvas.width - length), y: canvas.height, width: length, height: thickness, dx: 0, dy: -speed };
-          break;
-      }
-
-      bars.push(bar);
-    }
-
-    function movePlayer(dt) {
-      let dx = 0;
-      let dy = 0;
-
-      if (keys.ArrowUp || keys.w || keys.W) dy -= 1;
-      if (keys.ArrowDown || keys.s || keys.S) dy += 1;
-      if (keys.ArrowLeft || keys.a || keys.A) dx -= 1;
-      if (keys.ArrowRight || keys.d || keys.D) dx += 1;
-
-      if (dx !== 0 || dy !== 0) {
-        const len = Math.hypot(dx, dy);
-        dx = (dx / len) * player.speed;
-        dy = (dy / len) * player.speed;
-
-        player.x += dx;
-        player.y += dy;
-
-        player.x = Math.max(boundary.x + player.radius, Math.min(player.x, boundary.x + boundary.width - player.radius));
-        player.y = Math.max(boundary.y + player.radius, Math.min(player.y, boundary.y + boundary.height - player.radius));
-      }
-    }
-
-    function moveBars(dt) {
-      bars.forEach(bar => {
-        bar.x += bar.dx * dt;
-        bar.y += bar.dy * dt;
-      });
-    }
-
-    function checkCollisions() {
-      for (let bar of bars) {
-        if (
-          player.x + player.radius > bar.x &&
-          player.x - player.radius < bar.x + bar.width &&
-          player.y + player.radius > bar.y &&
-          player.y - player.radius < bar.y + bar.height
-        ) {
-          if (!player.immune) {
-            gameOver = true;
-          }
-        }
-      }
-    }
-
-    function manageImmunity() {
-      if (player.immune && Date.now() - player.immuneTime > player.immuneDuration) {
-        player.immune = false;
-        player.lastImmuneEnd = Date.now();
-      }
-    }
-
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      if (!gameStarted) return;
-
-      // Área de jogo
-      ctx.strokeStyle = 'white';
-      ctx.lineWidth = 2;
-      ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
-
-      // Jogador
-      ctx.beginPath();
       ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
       ctx.fillStyle = player.immune ? 'yellow' : 'white';
       ctx.fill();
@@ -354,14 +177,12 @@
       const dt = (timestamp - lastFrame) / 16.67;
       lastFrame = timestamp;
 
-      const baseInterval = 2500;
-      const speedUp = Math.min(score * 30, 1500);
+      const baseInterval = 4000; // Aumentado de 3500 para 4000
+      const speedUp = Math.min(score * 25, 1500); // Reduzido de score * 30 para score * 25
       const barInterval = baseInterval - speedUp;
 
       if (timestamp - lastTime > barInterval) {
-        createBar();
-        if (score >= 10) createBar();
-        if (score >= 20) createBar();
+        createBar(); // Apenas uma barra por intervalo
         lastTime = timestamp;
         score++;
       }
