--- a/Lazerunner/LazeRunner.html
+++ b/Lazerunner/LazeRunner.html
@@ -219,7 +219,7 @@
       const direction = Math.floor(Math.random() * 4);
       const thickness = 30; // Espessura mantida
       const length = Math.random() * 400 + 200; // Comprimento mantido (200-600px)
-      const speed = 1.2 + Math.random() * 1.3; // Velocidade reduzida (1.2-2.5)
+      const speed = 1.8 + Math.random() * 1.7; // Velocidade aumentada (1.8-3.5)
 
       let bar = {};
 
@@ -354,12 +354,14 @@
       const dt = (timestamp - lastFrame) / 16.67;
       lastFrame = timestamp;
 
-      const baseInterval = 4000; // Aumentado de 3500 para 4000
-      const speedUp = Math.min(score * 25, 1500); // Reduzido de score * 30 para score * 25
+      const baseInterval = 3000; // Reduzido de 4000 para 3000
+      const speedUp = Math.min(score * 25, 1500);
       const barInterval = baseInterval - speedUp;
 
       if (timestamp - lastTime > barInterval) {
-        createBar(); // Apenas uma barra por intervalo
+        createBar();
+        if (score >= 15) createBar(); // Barra extra em score >= 15
+        if (score >= 30) createBar(); // Segunda barra extra em score >= 30
         lastTime = timestamp;
         score++;
       }
